fix: navigation bar alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -65,11 +65,13 @@ img, embed, object, video {
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
+  height: 100px;
+  display: flex;
+  text-align: center;
   background-color: #252831;
-  text-align:center;
 }
 nav h1 {
+  align-content: center;
   margin: auto;
 }
 nav h1 a {
